Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
None
-
3
-
9223372036854775807
Description
static int __init lnet_selftest_init(void) { int nscheds; int rc; int i; rc = cfs_wi_sched_create("lst_s", lnet_cpt_table(), CFS_CPT_ANY, 1, &lst_sched_serial); if (rc != 0) { CERROR("Failed to create serial WI scheduler for LST\n"); return rc; } lst_init_step = LST_INIT_WI_SERIAL; nscheds = cfs_cpt_number(lnet_cpt_table()); CFS_ALLOC_PTR_ARRAY(lst_sched_test, nscheds); if (lst_sched_test == NULL) goto error; ... error: lnet_selftest_exit(); return rc;
should set rc to -ENOMEM before that goto
Landed for 2.15